# argendata-qa

./: .gitignore  CONTRIBUTING  README.md  guia.md  main.py  pyproject.toml  requirements.txt  run.py  run_tests.py  run_tests.sh
.github/workflows/: main.yml
argendata/: __init__.py  __main__.py  constants.py
argendata/freeze/: __init__.py  remapper.py
argendata/qa/: __init__.py  controles_calidad.py  reporter_fachada.py  subtopico.py  verificaciones.py  verificadores.py
argendata/reporter/: abstracto.py  concatenate_markdowns.py  constants.py  ejemplo_json.json  pdfexport.py  reporter.py  templater.py  templates.py
argendata/utils/: __init__.py  fuzzy_matching.py  logger.py  translator.py
gwrappers/: README.md  __init__.py  auth.py  resources.py
logger/: __init__.py
src/: __init__.py
src/gwrappers/: __init__.py  auth.py  resources.py
src/logger/: __init__.py
src/utils/: __init__.py
src/verificador/: README.md  __init__.py  abstracto.py  subtopico.py  verificadores.py
test/verificador/: __init__.py
tests/: __init__.py  __main__.py  tests_args.py  tests_controles_calidad.py  tests_geonomencladores.py  tests_methodmapping.py  tests_verificaciones.py
tools/: analysis.ipynb  analysis.old.ipynb  analysislib.py  consolidar_metadata.R  download_files.py  metadata.csv  move_files.py  reindex.ipynb
utils/: __init__.py
utils/files/: __init__.py  mime.py
verificador/: __init__.py  abstracto.py  correctitud_archivos.py  subtopico.py  subtopicos.py  tests.py  tests_base.py  verificadores.py  verificadores_abstractos.py  verificadores_concretos.py
(+25 files in other folders)
