[project]
name = "qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet==5.2.0",
    "jinja2==3.1.3",
    "lingua-language-detector>=1.4.0",
    "openpyxl==3.1.2",
    "pandas>=2.1.4",
    "pydrive==1.3.1",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "tabulate==0.9.0",
]
